2008-03-10  Mark D. Baushke  <mdb@gnu.org>

	* mkmodules.c, parseinfo.c: Update copyright.

	* parseinfo.c (parse_config): Add support for new
	"IgnoreUnknownConfigKeys" configuration key.
	* mkmodules.c (config_contents): Add text about the
	"IgnoreUnknownConfigKeys" option.
	* sanity.sh (config): Test that IgnoreUnknownConfigKeys=yes works.

2008-01-30  Derek R. Price  <derek@ximbiot.com>

	* update.c (join_file): Use local copy to detect deletion conflicts,
	as opposed to the base revision.  Restore freeing of rev2 to its
	original location.  Use simpler conflict message.
	* sanity.sh: Update to compensate.

2008-01-29  Derek R. Price  <derek@ximbiot.com>
	    Paul Edwards  <fight.subjugation@gmail.com>

	* update.c (join_file): Detect deletion conflicts.
	* sanity.sh (join, join4): Adjusted for this fix.
	  (join8, join9): Add new tests for conflicts.

2008-01-27  Mark D. Baushke  <mdb@gnu.org>

	* client.c (start_rsh_server): Use CVS_SSH for the :extssh:
	method or fall back to "ssh" as set using the --with-ssh flag to
	configure.

	* client.h, log.c, main.c, recurse.c, root.c: Update copyright for
	2008.

2008-01-24  Mark D. Baushke  <mdb@gnu.org>

	* recurse.c (do_recursion): s/cvs_notfiy_check/cvs_notify_check/
	* edit.c (dummy_fileproc), edit.h, client.h: Ditto.

	* log.c (cvslog): New -n option to revert the -N switch.
	(log_usage): Add -n to the help string.
	* main.c (cmds[]): Add "blame" as a synonym for the
	"annotate" command.
	* sanity.sh (cvs-log): New tests for 'cvs log -N -n' validation.
	(ann-10w1blame): Test the 'cvs blame' synonym for annotate.
	(Patch suggested by "David O'Brien" <obrien@FreeBSD.org>)

	* root.c (parse_cvsroot): Fix parsing for the :extssh: method.

	* sanity.sh (CVSROOTDIR): Use 'cvsrootdir' instead of 'cvsroot' to
	avoid problems on case preserving and/or case insensitive
	filesystems (e.g., HFS+).
	(CVSROOT_DIRNAME): Use $TESTDIR/$CVSROOTDIR instead of
	$TESTDIR/cvsroot to avoid filesystem case sensitivity problems.